Fixed CSS z-index bug

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -147,7 +147,7 @@ $transition-duration-card-image-hover-fast: $transition-duration-card-image-hove
 $border-radius-button: #{$lhse} / #{$lhse * 2};
 $border-radius-group: $lhse*.5;
 $border-radius-small-button: divide($border-radius-group, 2);
-$layers: card-li-focus-within, card-li-hover, scroll-to-top, card-overlay, dropdown-label, app-header, update-notif, bg-overlay, above-overlay, app-menu-toggler, dialog;
+$layers: card-li-focus-within, card-li-hover, scroll-to-top, dropdown-label, card-overlay, app-header, update-notif, bg-overlay, above-overlay, app-menu-toggler;
 $opacity-mana-symbols: .9167;
 $filter-brightness-button-hover: brightness(1.1667) saturate(1.0833);
 $x: 2px dashed rgba(#0f0, .5);
